# perchbackend

./: conftest.py  pyproject.toml  requirements.txt  test.py  worker.py
.github/workflows/: deploy.yml
core/: settings.py  urls.py
deployment/AWS/: clear_old_images.py  deploymentconfig.json  deploymentconfig.template.json
deployment/django/: Dockerfile  entrypoint.sh
deployment/nginx/: Dockerfile  default.conf
deployment/rq-scheduler/: Dockerfile  entrypoint.sh  scheduler.py
deployment/rq-worker/: Dockerfile
feed/: models.py
feed/migrations/: 0001_initial.py
ingestion/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
ingestion/migrations/: 0001_initial.py
ingestion/services/: gps_batch_ingestion.py  gps_batch_runner.py  publisher.py
ingestion/tests/: test_ingest_locations.py  test_redis_publish.py
locations/: admin.py  apps.py  models.py  pagination.py  serializers.py  tasks.py  urls.py  views.py
locations/migrations/: 0001_initial.py  0002_stop_locationping_accuracy_m_locationping_h3_r10_and_more.py  0003_locationping_dedupe_hash.py  0004_remove_locationping_locations_l_user_id_995b2e_idx_and_more.py  0005_locationevent_transitevent_delete_stop_and_more.py  0006_rename_distance_in_meters_transitevent_distance_meters_and_more.py  0007_locationevent_is_open.py  0008_remove_locationevent_is_open_locationevent_status.py  0009_remove_locationevent_locations_l_user_id_9ae8f9_idx_and_more.py
locations/services/: stop_detector.py  (+2 more)
social/: models.py
users/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
(+4 files in other folders)
