[project]
name = "perchsocial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.4",
    "django-rq>=4.1.0",
    "djangorestframework>=3.17.1",
    "geopandas>=1.1.3",
    "h3>=4.4.2",
    "movingpandas>=0.22.4",
    "pandas>=3.0.2",
    "psycopg>=3.3.3",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "shapely>=2.1.2",
    "stonesoup>=1.8",
    "uwsgi>=2.0.31",
]


[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".venv",
  "__pycache__",
  "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

per-file-ignores = {"*/migrations/*.py" = ["E501", "F401"]}

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["."]
